--- a/1.git.md
+++ b/1.git.md
@@ -1,5 +1,77 @@
 ### GIT
 
+1. bo'sh Git omborini yarating yoki mavjudni qayta ishga tushiring;
+```
+git init
+```
+---
+---
 
-s
-s
+2. omborni yangi katalogga klonlash;
+```
+git clone
+```
+---
+---
+
+3. filiallarni ro'yxatga olish, yaratish yoki o'chirish;
+```
+git branch
+```
+---
+
+---
+
+4. filiallarni almashtirish yoki ishlaydigan daraxt fayllarini tiklash;
+
+```
+git checkout
+```
+
+---
+
+---
+
+5. fayl tarkibini indeksga qo'shish;
+```
+git add
+```
+---
+
+---
+
+6. ombordagi o'zgarishlarni yozib oling;
+```
+git commit
+```
+---
+---
+
+7. bog'langan ob'ektlar bilan birga masofaviy referanslarni yangilang;
+
+```
+git push
+```
+
+8. boshqa ombordan yoki mahalliy filialdan oling va u bilan integratsiya qiling;
+```
+git pull
+```
+
+---
+
+---
+
+9. Ikki yoki undan ortiq rivojlanish tarixini birgalikda qo'shing;
+```
+git merge
+```
+
+---
+
+---
+
+10. shlaydigan daraxt holatini ko'rsatish ;
+```
+git status
+```
